Use get_target_property instead of custom logic

--- a/test_communication/CMakeLists.txt
+++ b/test_communication/CMakeLists.txt
@@ -41,17 +41,6 @@ if(AMENT_ENABLE_TESTING)
     SKIP_INSTALL
   )
 
-  if(NOT WIN32)
-    set(test_executable_extension "")
-    set(test_executable_subfolder "")
-  else()
-    set(test_executable_extension ".exe")
-    set(test_executable_subfolder "/${CMAKE_BUILD_TYPE}")
-    if("${test_executable_subfolder}" STREQUAL "/")
-      set(test_executable_subfolder "/Debug")
-    endif()
-  endif()
-
   # get the rmw implementations ahead of time
   get_available_rmw_implementations(middleware_implementations)
   foreach(middleware_impl ${middleware_implementations})
@@ -166,8 +155,10 @@ if(AMENT_ENABLE_TESTING)
       else()
         set(middleware_impls_suffix "__${middleware_impl1}__${middleware_impl2}")
       endif()
-      set(TEST_PUBLISHER_EXECUTABLE "${CMAKE_CURRENT_BINARY_DIR}${test_executable_subfolder}/test_publisher_cpp__${middleware_impl1}${test_executable_extension}")
-      set(TEST_SUBSCRIBER_EXECUTABLE "${CMAKE_CURRENT_BINARY_DIR}${test_executable_subfolder}/test_subscriber_cpp__${middleware_impl2}${test_executable_extension}")
+      get_target_property(TEST_PUBLISHER_EXECUTABLE test_publisher_cpp__${middleware_impl1} LOCATION)
+      string(REPLACE "$(Configuration)" "$<CONFIGURATION>" TEST_PUBLISHER_EXECUTABLE "${TEST_PUBLISHER_EXECUTABLE}")
+      get_target_property(TEST_SUBSCRIBER_EXECUTABLE test_subscriber_cpp__${middleware_impl2} LOCATION)
+      string(REPLACE "$(Configuration)" "$<CONFIGURATION>" TEST_SUBSCRIBER_EXECUTABLE "${TEST_SUBSCRIBER_EXECUTABLE}")
       foreach(message_file ${message_files})
         get_filename_component(TEST_MESSAGE_TYPE "${message_file}" NAME_WE)
         string(TOLOWER "${TEST_MESSAGE_TYPE}" TEST_MESSAGE_TYPE)
@@ -188,8 +179,10 @@ if(AMENT_ENABLE_TESTING)
       # TODO different vendors can't talk to each other right now
       if((NOT "${middleware_impl1} " STREQUAL "rmw_opensplice_cpp " AND NOT "${middleware_impl2} " STREQUAL "rmw_opensplice_cpp ") OR "${middleware_impl1} " STREQUAL "${middleware_impl2} ")
       # test requester / replier
-      set(TEST_REQUESTER_EXECUTABLE "${CMAKE_CURRENT_BINARY_DIR}${test_executable_subfolder}/test_requester_cpp__${middleware_impl1}${test_executable_extension}")
-      set(TEST_REPLIER_EXECUTABLE "${CMAKE_CURRENT_BINARY_DIR}${test_executable_subfolder}/test_replier_cpp__${middleware_impl2}${test_executable_extension}")
+      get_target_property(TEST_REQUESTER_EXECUTABLE test_requester_cpp__${middleware_impl1} LOCATION)
+      string(REPLACE "$(Configuration)" "$<CONFIGURATION>" TEST_REQUESTER_EXECUTABLE "${TEST_REQUESTER_EXECUTABLE}")
+      get_target_property(TEST_REPLIER_EXECUTABLE test_replier_cpp__${middleware_impl2} LOCATION)
+      string(REPLACE "$(Configuration)" "$<CONFIGURATION>" TEST_REPLIER_EXECUTABLE "${TEST_REPLIER_EXECUTABLE}")
       foreach(service_file ${service_files})
         get_filename_component(TEST_SERVICE_TYPE "${service_file}" NAME_WE)
         string(TOLOWER "${TEST_SERVICE_TYPE}" TEST_SERVICE_TYPE)
