--- a/test_communication/CMakeLists.txt
+++ b/test_communication/CMakeLists.txt
@@ -10,6 +10,10 @@ else()
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj")
 endif()
 
+if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--allow-shlib-undefined")
+endif()
+
 find_package(ament_cmake REQUIRED)
 
 if(AMENT_ENABLE_TESTING)
